--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
+  "name": "weekend-jquery-server-calculator",
+  "version": "1.0.0",
+  "description": "[Project Instructions](./INSTRUCTIONS.md), this line may be removed once you have updated the README.md",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JVillegas422/weekend-jquery-server-calculator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JVillegas422/weekend-jquery-server-calculator/issues"
+  },
+  "homepage": "https://github.com/JVillegas422/weekend-jquery-server-calculator#readme",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20"
   }
 }
