--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "[Project Instructions](./INSTRUCTIONS.md), this line may be removed once you have updated the README.md",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/JVillegas422/weekend-jquery-server-calculator#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "express": "^4.18.1"
   }
 }
